--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -1,53 +1,103 @@
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-user  nginx;
-worker_processes  1;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
+# Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
+include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections  1024;
+  worker_connections 1024;
 }
-
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                  '$status $body_bytes_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+  access_log /var/log/nginx/access.log main;
 
-    sendfile        on;
-    client_max_body_size 100M;
-    #tcp_nopush     on;
+  sendfile on;
+  client_max_body_size 100M;
+  #tcp_nopush     on;
 
-    keepalive_timeout  65;
-    tcp_nodelay on;
-    tcp_nopush on;
+  keepalive_timeout 65;
+  tcp_nodelay on;
+  tcp_nopush on;
+  types_hash_max_size 4096;
 
-    gzip  on;
-    gzip_http_version 1.1;
-    gzip_vary on;
-    gzip_comp_level 6;
-    gzip_proxied any;
-    gzip_types  text/plain
-                text/css
-                application/json
-                application/x-javascript
-                text/xml
-                application/xml
-                application/xml+rss
-                text/javascript
-                application/javascript
-                text/x-js
-                image/svg+xml
-                image/png;
-    gzip_buffers 16 8k;
-    gzip_disable "MSIE [1-6].(?!.*SV1)";
+  gzip on;
+  gzip_http_version 1.1;
+  gzip_vary on;
+  gzip_comp_level 6;
+  gzip_proxied any;
+  gzip_types text/plain
+  text/css
+  application/json
+  application/x-javascript
+  text/xml
+  application/xml
+  application/xml+rss
+  text/javascript
+  application/javascript
+  text/x-js
+  image/svg+xml
+  image/png;
+  gzip_buffers 16 8k;
+  gzip_disable "MSIE [1-6].(?!.*SV1)";
 
-    include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/conf.d/*.conf;
+
+  server {
+    listen       80 default_server;
+    listen       [::]:80 default_server;
+    server_name  _;
+    root         /usr/share/nginx/html;
+
+    # Load configuration files for the default server block.
+    include /etc/nginx/default.d/*.conf;
+
+    location /{
+    }
+
+    error_page 404 /404.html;
+    location = /404.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+    }
+  }
+
+  # Settings for a TLS enabled server.
+  #
+  #    server {
+  #        listen       443 ssl http2;
+  #        listen       [::]:443 ssl http2;
+  #        server_name  _;
+  #        root         /usr/share/nginx/html;
+  #
+  #        ssl_certificate "/etc/pki/nginx/server.crt";
+  #        ssl_certificate_key "/etc/pki/nginx/private/server.key";
+  #        ssl_session_cache shared:SSL:1m;
+  #        ssl_session_timeout  10m;
+  #        ssl_ciphers HIGH:!aNULL:!MD5;
+  #        ssl_prefer_server_ciphers on;
+  #
+  #        # Load configuration files for the default server block.
+  #        include /etc/nginx/default.d/*.conf;
+  #
+  #        error_page 404 /404.html;
+  #            location = /40x.html {
+  #        }
+  #
+  #        error_page 500 502 503 504 /50x.html;
+  #            location = /50x.html {
+  #        }
+  #    }
 }
+
+
